crates/context-macro/tests/constraints/invalid_token_variant.fail.stderr
error: Invalid variant for the token constraint.
  --> tests/constraints/invalid_token_variant.fail.rs:22:22
   |
22 |         token::owner = mint
   |                      ^
